--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,7 @@ title:                 Wenxi Li
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
-  with a focus on personal sites that are meant to impress.
+  This is Wenxi's personal website.
 
 # A shorter description for the sidebar.
 tagline:               Welcome to Wenxi's website!
@@ -42,18 +41,18 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  name:                Wenxi Li
+  email:               arielliwenxi@gmail.com
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
-    url:               /example/
-  - title:             Documentation
+  - title:             Blog
     url:               /docs/
-  - title:             About
+  - title:             Projects
+    url:               /example/
+  - title:             About Me
     url:               /about/
 
 # Add links to the footer.
