--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ menu:
   - title:             Projects
     url:               /example/
   - title:             About Me
-    url:               /about/
+    url:               /resume/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
