--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 # Uncomment and set the URL of your site (with protocol, e.g. `https://`)
 # NOTE: You don't need to provide this property when hosting on GitHub Pages or Netlify.
-# url:                   https://username.github.io
+url:                   https://arieldavinci.github.io/Wenxi-Li/
 
 # Uncomment and set the "base URL" of your site.
 # When your site is in a subdirectory, set to `/<name of directory>`,
@@ -52,7 +52,7 @@ menu:
     url:               /docs/
   - title:             Projects
     url:               /example/
-  - title:             About Me
+  - title:             Resume
     url:               /resume/
 
 # Add links to the footer.
